# ai-travel-platform

./: .gitignore  AGENTS.md  PROJECT-STATUS.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/: ruleset.json
.github/workflows/: test.yml
content/notes/: _TEMPLATE.md  cableway-moscow.md
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  MVP.md  PRD.md  RETRO.md  content-enhancement-plan.md  content-library.md  image-reference.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: admin.html  index.html  preview-v2.html  preview.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/plan/: page.tsx
scripts/: build_notes.py  download_images.py  start-backend.py
services/planner-api/: handoff_log.jsonl  requirements.txt
services/planner-api/app/: main.py
services/planner-api/app/api/: chat.py  itinerary.py  poi.py  support.py
services/planner-api/app/core/: config.py
services/planner-api/app/llm/: engine.py
services/planner-api/app/models/: schemas.py
services/planner-api/app/services/: poi_store.py  seed.py
services/planner-api/tests/: conftest.py  test_itinerary.py  test_pois.py  test_support.py
